6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: "nginx.example.com" # 이 위치에 사용할 도메인
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: vultr
spec:
  tls:
  - hosts:
    - "nginx.example.com" # ssl 적용될 도메인 입력
    secretName: wildcard-tls
  rules:
  - host: "nginx.example.com" # 라우팅 될 호스트 정보 입력
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
